[package]
name = "oauth2-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-session = "3.0.0"
axum = "0.7.5"
http = "1.1.0"
oauth2 = "4.4.2"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dotenv = "0.15.0"
